# Mini_cms

./: .env.example  .env.test  .gitignore  Dockerfile  Makefile  Readme.md  docker-compose-test.yml  docker-compose.yml  init.sql  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_06_22_2153-7377caf6a346_initial_full_schema.py  2025_06_22_2156-6a827ea87c2f_initial_new_full_schema.py  2025_06_23_1753-0437fb8c830b_add_relationship_for_task.py  2025_06_23_1805-d89965d1e79e_add_timezone_in_task.py  2025_06_24_1022-434f0aed0657_add_comment.py  2025_06_25_0928-1a676f10ca12_add_comment.py  2025_06_25_1628-284b73864327_add_users_projects_table.py  2025_06_26_1719-0894480ced35_create_all_tables.py  2025_06_28_1633-5ad856bcecff_client_13_digits.py  2025_07_02_0933-c6a823ca01c0_add_on_delete_cascade_to_profile_user_id.py  2025_07_03_1039-157fd1f7f3b7_add_on_delete_cascade_to_task_project.py  2025_07_08_1146-91ac5f13782c_all_tables.py  2025_09_30_1524-8ca813b9af72_initial_migration.py  2025_10_13_1228-3e3759c9d067_added_number_field_in_project_model.py
app/: __init__.py  celery_app.py  main.py  middleware.py  redis.py  taskiq_broker.py
app/api/: roter.py
app/core/: config.py  database.py
app/crud/: auth.py  client.py  comment.py  deal.py  profile.py  project.py  task.py  user.py
app/db/: data.py  init_db.py
app/mailling/: send_email.py  send_welcome_email.py
app/models/: __init__.py  client.py  comment.py  deal.py  profile.py  project.py  task.py  user.py  users_projects.py
frontend/: package-lock.json  package.json
tests/: conftest.py  test_users.py
(+40 files in other folders)
