[tool.poetry]
name = "12-cms-project"
version = "0.1.0"
description = ""
authors = ["Igor <Aleshichev.git@email.ua>"]
readme = "README.md"
packages = [{include = "12"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.13"
pydantic = {extras = ["email"], version = "^2.11.7"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
pydantic-settings = "^2.10.0"
asyncpg = "^0.30.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
bcrypt = "^4.3.0"
python-multipart = "^0.0.20"


[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.34.3"}
pytest = "^8.4.1"
black = "^25.1.0"
pylint = "^3.3.7"
isort = "^6.0.1"
alembic = "^1.16.2"
faker = "^37.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
